<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_customer_support"
            android:icon="@drawable/ic_baseline_support_agent_24"
            android:title="@string/customer_support" />
        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/account_settings" />
    </group>
</menu>